improved alignments, paddings and other layout issues in screen, print and handheld stylesheets

--- a/trunk/web/css/handheld.css
+++ b/trunk/web/css/handheld.css
@@ -76,7 +76,7 @@
 	padding-top: 26px;
 }
 
-#body .projects .item, #body .work-experience .item {
+#body .projects .item, #body .work-experience .item, #body .projects .description, #body .work-experience .description {
 	clear: none;
 	float: none;
 	padding-bottom: 0;
